addons/cert-manager/v1.7/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: cert-manager-webhook
  labels:
    app: webhook
    app.kubernetes.io/name: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/component: "webhook"
    app.kubernetes.io/version: "v1.7.1"
  annotations:
    cert-manager.io/inject-ca-from-secret: "cert-manager/cert-manager-webhook-ca"
webhooks:
- name: webhook.cert-manager.io
  rules:
  - apiGroups:
    - "cert-manager.io"
    - "acme.cert-manager.io"
    apiVersions:
    - "v1"
    operations:
    - CREATE
    - UPDATE
    resources:
    - "*/*"
  admissionReviewVersions: ["v1"]
  # This webhook only accepts v1 cert-manager resources.
  # Equivalent matchPolicy ensures that non-v1 resource requests are sent to
  # this webhook (after the resources have been converted to v1).
  matchPolicy: Equivalent
  timeoutSeconds: 10
  failurePolicy: Fail
  # Only include 'sideEffects' field in Kubernetes 1.12+
  sideEffects: None
  clientConfig:
    service:
      name: cert-manager-webhook
      namespace: "cert-manager"
      path: /mutate

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cert-manager-webhook
  labels:
    app: webhook
    app.kubernetes.io/name: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/component: "webhook"
    app.kubernetes.io/version: "v1.7.1"
  annotations:
    cert-manager.io/inject-ca-from-secret: "cert-manager/cert-manager-webhook-ca"
webhooks:
- name: webhook.cert-manager.io
  namespaceSelector:
    matchExpressions:
    - key: "cert-manager.io/disable-validation"
      operator: "NotIn"
      values:
      - "true"
    - key: "name"
      operator: "NotIn"
      values:
      - cert-manager
  rules:
  - apiGroups:
    - "cert-manager.io"
    - "acme.cert-manager.io"
    apiVersions:
    - "v1"
    operations:
    - CREATE
    - UPDATE
    resources:
    - "*/*"
  admissionReviewVersions: ["v1"]
  # This webhook only accepts v1 cert-manager resources.
  # Equivalent matchPolicy ensures that non-v1 resource requests are sent to
  # this webhook (after the resources have been converted to v1).
  matchPolicy: Equivalent
  timeoutSeconds: 10
  failurePolicy: Fail
  sideEffects: None
  clientConfig:
    service:
      name: cert-manager-webhook
      namespace: "cert-manager"
      path: /validate
